@@ -1,3 +1,8 @@
+2005-06-10  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* elfcode.h (elf_write_relocs): Do nothing if there are no
+	relocations.
+
 2005-06-10  Alan Modra  <amodra@bigpond.net.au>
 
 	* dwarf2.c (decode_line_info): Revert last change.  Instead set
